# jaemon

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  pyproject.toml
jaemon/: cli.py  config.yaml.example  fetcher.py  notifier.py  parser.py  scheduler.py  store.py
tests/: test_fetcher.py  test_parser.py  test_store.py
